src/objects/SPEIntermediateTempvalue__c.object
<CustomObject>
    <fields>
        <fullName>DateFormat__c</fullName>
        <label>Date Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIData__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PI Data</label>
        <referenceTo>SPE_PIDefinition__c</referenceTo>
        <relationshipLabel>SPE Intermediate Temp values</relationshipLabel>
        <relationshipName>SPE_Intermediate_Temp_values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TempValue__c</fullName>
        <label>TempValue</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UniqueIdentifier__c</fullName>
        <label>Unique Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>SPE Intermediate Temp value</label>
    <nameField>
        <displayFormat>ITV-{0000}</displayFormat>
        <label>SPE Intermediate Temp value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPE Intermediate Temp values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>